# aetherfloat-validation

./: Dockerfile  LICENSE  README.md  pyproject.toml
src/: aether_core.cpp  aether_sim.py  eval_ptq_7b.py  synth_mac_datapath.py  train_ablation.py  train_qat_af8.py  wobble_plot.py
